--- a/main.css
+++ b/main.css
@@ -6,7 +6,6 @@
 }
 
 body{
-    background-color: #e7e7e7;
     padding-top: 100px;
 }
 
@@ -28,8 +27,10 @@ header h1{
 
 .container{
     max-width: 960px;
+    padding: 8px;
     width: 100%;
     margin: 0 auto;
+    background-color: #e7e7e7;
 }
 
 /* ########### FORMULÁRIO ############### */
